# rag-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  alembic.ini  app.py  bento_embeddings.py  codecov.yaml  config.py  docker-compose.yml  docling_loader.py  document_storage.py  document_storrage.py  docx_unstructured_reader.py  entrypoint.sh  evaluate.py  index.html  lance_langchain.py  log_config.py  main.ps1  main.py  mkdocs.yml  objects.inv  pdf_md_reader.py  pyproject.toml  pyrightconfig.json  rag_pipeline.py  renovate.json  requirements.txt  run.ps1  run.sh  run_ingestion.sh  sitemap.xml  tox.ini  utils.py
.cursor/rules/: cursor-tool.mdc  nuxt.mdc  python.mdc
.github/: copilot-instructions.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  validate-codecov-config.yml
alembic/: README  env.py
alembic/versions/: 7643df89db15_initial_setup copy.py  ee665cbd61f6_add_indexes.py
api/: README.md  database.db  lance_db.ps1  main.py  models.py  pyproject.toml  run.ps1  run.sh  setup_lancedb.py
api/cli/: create_user.py
api/conf/: chat.yaml
api/core/: bento_embeddings.py  lance_retriever.py  rag_pipeline.py  rag_states.py
api/data/: docling_loader.py  document_storage.py
api/tests/: evaluate.py  stress_test.py  test_docling.py
api/ui/: app.py  constants.py
api/ui/components/: chat.py  debug.py
api/utils/: config.py  file_rendering.py  logging.py
conf/: conf.yaml
conf/local/: users.yaml
docs/: README.md  document_api.md  index.md  ingestion.md  orphaned_document_cleanup.md
document_api/: index.html
ingestion/: index.html
orphaned_document_cleanup/: index.html
search/: search_index.json
src/core/: bento_embeddings.py  lance_retriever.py  rag_pipeline.py  rag_states.py
src/data/: docling_loader.py  document_storage.py
src/rag/: _version.py  app.py  auth.py  feedback.csv  main.py  models.py  setup_lancedb.py
src/rag/actions/: action_protocol.py  backoff_action.py  generate_answer_action.py  grade_answer_action.py  grade_hallucination_action.py  retrieve_action.py  route_question_action.py
src/rag/cli/: cleanup_orphaned_documents.py  create_user.py  drop_database.py  run_ingestion.py  setup_lancedb.py  upload_to_s3.py
src/rag/conf/: chat.yaml  conf.yaml  ingestion.yaml
src/rag/conf/local/: users.yaml
src/rag/connectors/: bento_embeddings.py  docling_loader.py  document_storage.py  lance_retriever.py  pg_retriever.py
src/rag/core/: bento_embeddings.py  lance_retriever.py  rag_pipeline.py  rag_states.py
src/rag/data/: docling_loader.py  document_storage.py
src/rag/documents/: document_storage.py
src/rag/models/: api_models.py  document.py  rag_states.py  stream_response.py  user.py
src/rag/services/: document_ingestion.py  document_management.py  rag_pipeline.py
src/rag/stubs/pyarrow/: compute.pyi  dataset.pyi  feather.pyi  fs.pyi  ipc.pyi  jvm.pyi  orc.pyi  pandas_compat.pyi  types.pyi  util.pyi
src/rag/stubs/pyarrow/interchange/: buffer.pyi  column.pyi  from_dataframe.pyi
src/rag/stubs/pyarrow/parquet/: core.pyi
src/rag/stubs/pyarrow/tests/: util.pyi
src/rag/stubs/transformers/: __init__.pyi  activations.pyi  activations_tf.pyi  audio_utils.pyi  cache_utils.pyi  configuration_utils.pyi  convert_graph_to_onnx.pyi  convert_slow_tokenizer.pyi  debug_utils.pyi  dynamic_module_utils.pyi  feature_extraction_sequence_utils.pyi  feature_extraction_utils.pyi  hf_argparser.pyi  hyperparameter_search.pyi  image_processing_base.pyi  image_processing_utils.pyi  image_processing_utils_fast.pyi  image_transforms.pyi  image_utils.pyi  keras_callbacks.pyi  model_debugging_utils.pyi  modelcard.pyi  modeling_attn_mask_utils.pyi  modeling_flash_attention_utils.pyi  modeling_flax_outputs.pyi  modeling_flax_utils.pyi  modeling_gguf_pytorch_utils.pyi  modeling_outputs.pyi  modeling_rope_utils.pyi  modeling_tf_outputs.pyi  modeling_tf_pytorch_utils.pyi  modeling_tf_utils.pyi  modeling_utils.pyi  optimization.pyi  optimization_tf.pyi  processing_utils.pyi  pytorch_utils.pyi  safetensors_conversion.pyi  testing_utils.pyi  tf_utils.pyi  (+12 more)
src/rag/stubs/transformers/agents/: __init__.pyi  agents.pyi  default_tools.pyi  document_question_answering.pyi  image_question_answering.pyi  llm_engine.pyi  monitoring.pyi  search.pyi  speech_to_text.pyi  text_to_speech.pyi  tools.pyi  translation.pyi
src/rag/stubs/transformers/generation/: __init__.pyi  beam_constraints.pyi  beam_search.pyi  candidate_generator.pyi  configuration_utils.pyi  flax_logits_process.pyi  flax_utils.pyi  logits_process.pyi  stopping_criteria.pyi  streamers.pyi  tf_logits_process.pyi  tf_utils.pyi  utils.pyi  watermarking.pyi
src/rag/stubs/transformers/integrations/: __init__.pyi  aqlm.pyi  awq.pyi  bitnet.pyi  bitsandbytes.pyi  deepspeed.pyi  eetq.pyi  executorch.pyi  fbgemm_fp8.pyi  (+12 more)
src/rag/stubs/version_pioneer/: api.pyi  versionscript.pyi
src/rag/tests/: stress_test.py
src/rag/tools/: calculator.py
src/rag/ui/: app.py  cli.py
src/rag/ui/components/: chat.py  debug.py  feedback.py
src/rag/utils/: config.py  db.py  file_rendering.py  logger.py  message_summarizer.py  model_clients.py  s3.py  stream_response.py
src/sql/: create-index.sql  hybrid_search.sql  init-db.sql  vector_search.sql
src/ui/: app.py
src/ui/components/: chat.py  feedback.py
src/utils/: config.py  file_rendering.py  logging.py
tests/: README.md  __init__.py  test_docling.py
tests/integration/: __init__.py
tests/integration/rag/: __init__.py
tests/integration/rag/core/: __init__.py  test_bento_embeddings_integration.py
tests/unit/: __init__.py  conftest.py
tests/unit/rag/: __init__.py
tests/unit/rag/connectors/: test_docling_loader.py
tests/unit/rag/core/: test_bento_embeddings.py  test_mocks.py  test_rag_graph.py  test_rag_pipeline.py
tests/unit/rag/documents/: __init__.py
tests/unit/rag/services/: __init__.py  test_mocks.py  test_node_functions.py  test_pipeline_nodes.py  test_rag_pipeline.py
tests/unit/rag/utils/: __init__.py  test_config.py  test_mocks.py
(+1332 files in other folders)
