[project]
name = "sh-rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.9.0",
    "einops>=0.8.0",
    "lancedb>=0.17.0",
    "langchain-community>=0.3.10",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.2.11",
    "langchain>=0.3.10",
    "mammoth>=1.8.0",
    "omegaconf>=2.3.0",
    "pypdf2>=3.0.1",
    "rich>=13.9.4",
    "streamlit-authenticator>=0.4.1",
    "streamlit>=1.40.2",
]

