[project]
name = "sh-rag-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.15.0",
    "einops>=0.8.0",
    "lancedb>=0.17.0",
    "langchain-community>=0.3.14",
    "langchain-openai>=0.2.14",
    "langchain>=0.3.14",
    "mammoth>=1.8.0",
    "omegaconf>=2.3.0",
    "pypdf2>=3.0.1",
    "rich>=13.9.4",
    "streamlit-authenticator>=0.4.1",
    "streamlit>=1.41.1",
    "wheel>=0.45.1",
    "psutil>=6.1.1",
    "bentoml>=1.3.19",
    "asyncio>=3.4.3",
    "ninja>=1.11.1.2",
    "transformers>=4.47.0",
]

[project.optional-dependencies]
compile = ["flash-attn==2.7.2.post1"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.2.post1"
requires-dist = ["torch", "einops", "setuptools"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]
torchvision = [
    { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
